--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ disableLanguages        = []
     #   alt                 = "Hugo Future Imperfect Slim"
 
   [params.sidebar]
-    about               = "This theme was developed for Hugo static site generator."
+    about               = "Mark Rendle's blog about making software and stuff."
     postAmount          = 5
     categories          = true
     categoriesByCount   = true
@@ -96,12 +96,12 @@ disableLanguages        = []
     pre               = "<i class='far fa-id-card'></i>"
     weight            = 2
 
-  [[menu.main]]
-    name              = "Blog"
-    identifier        = "blog"
-    url               = "/blog/"
-    pre               = "<i class='far fa-newspaper'></i>"
-    weight            = 3
+  # [[menu.main]]
+  #   name              = "Blog"
+  #   identifier        = "blog"
+  #   url               = "/blog/"
+  #   pre               = "<i class='far fa-newspaper'></i>"
+  #   weight            = 3
 
   [[menu.main]]
     name              = "Categories"
