--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ disableLanguages        = []
   cssFiles              = ["default"]
   jsFiles               = ["default"]
   highlightjs           = true
-  highlightjsTheme      = ""
+  highlightjsTheme      = "vs"
   highlightjsLang       = []
   viewMorePostsLink     = "/blog/"
   readingTime           = true
